--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^17.2.3",
     "express": "~4.16.1",
+    "mongoos": "^0.0.1-security",
+    "mongoose": "^9.0.1",
     "morgan": "~1.9.1"
   }
 }
